# e1-jax

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  reusable-ci.yml
e1jax/: __init__.py  _constants.py  _model.py  main.py  tokenizer.py
tests/: test_model.py
