[project]
name = "e1-jax"
version = "0.1.0"
description = "An implementation of the E1 protein language model family with Jax/Equinox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "ty>=0.0.1a31",
]
